Changed chalk and highlighter registrations to more straightforward call for HolderSet creation